welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:21: error: value c is not a member of object java.awt.Color
  	return couleurCase == Color.c
                                    ^